2014-07-30  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (getpid_wrap, getppid_wrap): New static functions.
	(eval_init): Registered getpid and getppid intrinsics.

	* signal.c (kill_wrap): New static function.
	(sig-init): Registered kill intrinsic function.

	* txr.1: Documented getpid, gettpid and kill.

2014-07-30  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l: Allow unquotes and splices in QSPECIAL and BRACED states.

	* parser.y (quasi_item): Support splices as items.

	* genvim.txr: Syntax highlighting support for unquotes in
	quasiliterals.

	* txr.vim: Updated.

2014-07-29  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register uniq function.

	* lib.c (uniq): New function.

	* lib.h (uniq): Declared.

	* txr.1: Documented uniq.

2014-07-29  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (repeatv): Renamed to repeat. Turned into function
	with one optional argument, reflecting existing behavior.
	(eval_init): Registration of repeat updated.

	* txr.1: Fixed incorrect documentation which falsely suggests
	that repeat takes multiple lists, and doesn't mention
	the optional count.

2014-07-29  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (plus, minus, mul): Fix missing breaks
	to switch statements, leading to strange error
	messages when wrong types are passed in.

2014-07-29  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register nconc as intrinsic.

	* lib.c (nconcv): New function.

	* lib.h (nconcv): Declared.

	* txr.1: Documented nconc.

2014-07-29  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (reduce_left, reduce_right): Nullify incoming sequence
	argument so empty vectors and strings can be processed.

2014-07-29  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (giterate_func, giterate): Adjusting semantics of giterate to
	include seed item in the sequence. The while test is applied to
	each item before it is passed through the function. Also,
	eliminated useless rplacd operation.

	* txr.1: Updated documentation of giterate.
